2012-04-22  KUBO Takehiro  <kubo@jiubao.org>
	* VERSION: update to 2.1.1.
	* README.md: add links.

2012-04-22  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.0 and 2.1.1.
	* README -> README.md: renamed.
	* .yardopts: added for yard.
	* docs/install-binary-package.md, docs/report-installation-issue.md:
	    added.
	* docs/platform-specific-issues.md, lib/oci8/bindtype.rb, lib/oci8/connection_pool.rb
	  lib/oci8/object.rb, lib/oci8/properties.rb: fix documents.
	* ruby-oci8.gemspec, dist-files: fix for renamed and added files.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_datetime.rb: fix to pass tests on ruby 1.9.1 and earlier.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: fix to raise a RuntimeError when a connection
	    retrieved from a connection pool is set as non-blocking on 
	    ruby 1.8.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: OCI8::LOB#read() returns an empty string '' when
	    it is an empty lob.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* custom-rdoc.rb: delete an unused file.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_oci8.rb: fix code to test OCI8::CLOB.new(conn, '').

2012-04-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: 1. fix an exception when OCI8::CLOB.new(conn, '')
	    is called. 2. Reset the position of a newly created LOB.

2012-04-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: fix core dump.
	    See: https://github.com/kubo/ruby-oci8/issues/11
	    (reported by Raimonds Simanovskis)

2012-04-08  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/win32.c, lib/oci8/oracle_version.rb:
	    revise rdoc comments.

2012-04-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/ocihandle.c, ext/oci8/oradate.c,
	  lib/oci8/encoding-init.rb, lib/oci8/oci8.rb, lib/oci8/ocihandle.rb:
	    revise rdoc comments.

2012-04-05  KUBO Takehiro  <kubo@jiubao.org>